--- a/index.html
+++ b/index.html
@@ -1,29 +1,95 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
-  </head>
-  <body>
-      <h1>Выбери свой продукт</h1>
-      <ul>
-         <li>
-            <img src="img/photo 1.png" alt="Товар увлажняющий мусс"/>
-            <span>для нормальной кожи</span>
-            <h2>Увлажняющий мусс</h2>
-            <p>Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.</p>
-            <span>Состав:</span>
-            <ul>
-              <li>активные натуральные комплексы</li>
-              <li>витамины С, А, РР, В И Е</li>
-              <li>солнцезащитные компоненты</li>
-            </ul>
-            <b>Цена:</b>
-            <span>2 750 &#8381
-            </span>
-        </li>
-      </ul>
-  </body>
-</html>
-            
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="container">
+    <div class="background-image"></div>
+    <h1 class="main-heading">Выбери свой продукт</h1>
+    <ul class="product-list-container">  
+      <li class="card-container">
+        <img src="/img/muss.png" alt="Товар увлажняющий мусс"/>
+        <span class="product-category">для нормальной кожи</span>
+        <h2 class="product-name">Увлажняющий мусс</h2>
+        <p class="product-descripton">Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.</p>
+        <span>Состав:</span>
+        <ul class="product-compaund">
+          <li class="product-compaund-item">активные натуральные комплексы</li>
+          <li class="product-compaund-item">витамины С, А, РР, В И Е</li>
+          <li class="product-compaund-item">солнцезащитные компоненты</li>
+        </ul>
+        <div class="product-price-container">
+          <b class="product-price-label">Цена:</b>
+          <span class="product-price">2 750 &#8381</span>
+      </li>
+      <li class="card-container">
+        <img src="/img/mask.png" alt="Увлажняющая маска"/>
+        <span class="product-category">для нормальной кожи</span>
+        <h2 class="product-name">Увлажняющая маска</h2>
+        <p class="product-descripton">Способствует удерживанию влаги в верхних слоях кожи.</p>
+        <span>Состав:</span>
+        <ul class="product-compaund">
+          <li class="product-compaund-item">воски</li>
+          <li class="product-compaund-item">минералы</li>
+          <li class="product-compaund-item">масла</li>
+        </ul>
+        <div class="product-price-container">
+          <b class="product-price-label">Цена:</b>
+          <span class="product-price">3 500 &#8381</span>
+      </li>
+      <li class="card-container">
+        <img src="/img/the gel.png" alt="Гель для умывания"/>
+        <span class="product-category">для нормальной кожи</span>
+        <h2 class="product-name">Гель для умывания</h2>
+        <p class="product-descripton">Интенсивно очищает, не повреждает защитный барьер кожи.</p>
+        <span>Состав:</span>
+        <ul class="product-compaund">
+          <li class="product-compaund-item">минералы</li>
+          <li class="product-compaund-item">витамины С, А, РР, В И Е</li>
+          <li class="product-compaund-item">солнцезащитные компоненты</li>
+        </ul>
+        <div class="product-price-container">
+          <b class="product-price-label">Цена:</b>
+          <span class="product-price">1 650 &#8381</span>
+      </li>
+      <li class="card-container">
+        <img src="/img/set №1.png" alt="Подарочный набор №1"/>
+        <span class="product-category">для нормальной кожи</span>
+        <h2 class="product-name">Подарочный набор №1</h2>
+        <p class="product-descripton">Набор, состоящий из увлажняющего крема и маски.</p>
+        <span>Состав:</span>
+        <ul class="product-compaund">
+          <li class="product-compaund-item">воски</li>
+          <li class="product-compaund-item">минералы</li>
+          <li class="product-compaund-item">масла</li>
+        </ul>
+        <div class="product-price-container">
+          <b class="product-price-label">Цена:</b>
+          <span class="product-price">4 750 &#8381</span>
+      </li>
+      <li class="card-container">
+        <img src="/img/set №5.png" alt="Подарочный набор №5"/>
+        <span class="product-category">для нормальной кожи</span>
+        <h2 class="product-name">Подарочный набор №5</h2>
+        <p class="product-descripton">Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
+        <span>Состав:</span>
+        <ul class="product-compaund">
+          <li class="product-compaund-item">воски</li>
+          <li class="product-compaund-item">минералы</li>
+          <li class="product-compaund-item">масла</li>
+        </ul>
+        <div class="product-price-container">
+          <b class="product-price-label">Цена:</b>
+          <span class="product-price">7 520 &#8381</span>
+      </li>
+    </ul>
+  </div>
+</body>
+</html> 
