--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="product-price">3 500 &#8381</span>
       </li>
       <li class="card-container">
-        <img src="/img/the gel.png" alt="Гель для умывания"/>
+        <img src="/img/gel.png" alt="Гель для умывания"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Гель для умывания</h2>
         <p class="product-descripton">Интенсивно очищает, не повреждает защитный барьер кожи.</p>
@@ -60,7 +60,7 @@
           <span class="product-price">1 650 &#8381</span>
       </li>
       <li class="card-container">
-        <img src="/img/set №1.png" alt="Подарочный набор №1"/>
+        <img src="/img/set№1.png" alt="Подарочный набор №1"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Подарочный набор №1</h2>
         <p class="product-descripton">Набор, состоящий из увлажняющего крема и маски.</p>
@@ -75,7 +75,7 @@
           <span class="product-price">4 750 &#8381</span>
       </li>
       <li class="card-container">
-        <img src="/img/set №5.png" alt="Подарочный набор №5"/>
+        <img src="/img/set№5.png" alt="Подарочный набор №5"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Подарочный набор №5</h2>
         <p class="product-descripton">Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
