--- a/index.html
+++ b/index.html
@@ -15,79 +15,84 @@
     <h1 class="main-heading">Выбери свой продукт</h1>
     <ul class="product-list-container">  
       <li class="card-container">
-        <img src="/img/muss.png" alt="Товар увлажняющий мусс"/>
+        <img class="product-image" src="/img/muss.png" alt="Товар увлажняющий мусс"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Увлажняющий мусс</h2>
         <p class="product-descripton">Глубоко увлажняют кожу лица, оставляя её мягкой и гладкой.</p>
         <span>Состав:</span>
-        <ul class="product-compaund">
-          <li class="product-compaund-item">активные натуральные комплексы</li>
-          <li class="product-compaund-item">витамины С, А, РР, В И Е</li>
-          <li class="product-compaund-item">солнцезащитные компоненты</li>
+        <ul class="product-compound">
+          <li class="product-compound-item">активные натуральные комплексы</li>
+          <li class="product-compound-item">витамины С, А, РР, В И Е</li>
+          <li class="product-compound-item">солнцезащитные компоненты</li>
         </ul>
         <div class="product-price-container">
           <b class="product-price-label">Цена:</b>
           <span class="product-price">2 750 &#8381</span>
+        </div>
       </li>
       <li class="card-container">
-        <img src="/img/mask.png" alt="Увлажняющая маска"/>
+        <img class="product-image" src="/img/mask.png" alt="Увлажняющая маска"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Увлажняющая маска</h2>
         <p class="product-descripton">Способствует удерживанию влаги в верхних слоях кожи.</p>
         <span>Состав:</span>
-        <ul class="product-compaund">
-          <li class="product-compaund-item">воски</li>
-          <li class="product-compaund-item">минералы</li>
-          <li class="product-compaund-item">масла</li>
+        <ul class="product-compound">
+          <li class="product-compound-item">воски</li>
+          <li class="product-compound-item">минералы</li>
+          <li class="product-compound-item">масла</li>
         </ul>
         <div class="product-price-container">
           <b class="product-price-label">Цена:</b>
           <span class="product-price">3 500 &#8381</span>
+        </div>  
       </li>
       <li class="card-container">
-        <img src="/img/gel.png" alt="Гель для умывания"/>
+        <img class="product-image" src="/img/gel.png" alt="Гель для умывания"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Гель для умывания</h2>
         <p class="product-descripton">Интенсивно очищает, не повреждает защитный барьер кожи.</p>
         <span>Состав:</span>
-        <ul class="product-compaund">
-          <li class="product-compaund-item">минералы</li>
-          <li class="product-compaund-item">витамины С, А, РР, В И Е</li>
-          <li class="product-compaund-item">солнцезащитные компоненты</li>
+        <ul class="product-compound">
+          <li class="product-compound-item">минералы</li>
+          <li class="product-compound-item">витамины С, А, РР, В И Е</li>
+          <li class="product-compound-item">солнцезащитные компоненты</li>
         </ul>
         <div class="product-price-container">
           <b class="product-price-label">Цена:</b>
           <span class="product-price">1 650 &#8381</span>
+        </div>  
       </li>
       <li class="card-container">
-        <img src="/img/set№1.png" alt="Подарочный набор №1"/>
+        <img class="product-image" src="/img/set№1.png" alt="Подарочный набор №1"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Подарочный набор №1</h2>
         <p class="product-descripton">Набор, состоящий из увлажняющего крема и маски.</p>
         <span>Состав:</span>
-        <ul class="product-compaund">
-          <li class="product-compaund-item">воски</li>
-          <li class="product-compaund-item">минералы</li>
-          <li class="product-compaund-item">масла</li>
+        <ul class="product-compound">
+          <li class="product-compound-item">воски</li>
+          <li class="product-compound-item">минералы</li>
+          <li class="product-compound-item">масла</li>
         </ul>
         <div class="product-price-container">
           <b class="product-price-label">Цена:</b>
           <span class="product-price">4 750 &#8381</span>
+        </div>
       </li>
       <li class="card-container">
-        <img src="/img/set№5.png" alt="Подарочный набор №5"/>
+        <img class="product-image" src="/img/set№5.png" alt="Подарочный набор №5"/>
         <span class="product-category">для нормальной кожи</span>
         <h2 class="product-name">Подарочный набор №5</h2>
         <p class="product-descripton">Весь набор средств Invisible symphony, крем, маска, мусс и гель для умывания.</p>
         <span>Состав:</span>
-        <ul class="product-compaund">
-          <li class="product-compaund-item">воски</li>
-          <li class="product-compaund-item">минералы</li>
-          <li class="product-compaund-item">масла</li>
+        <ul class="product-compound">
+          <li class="product-compound-item">воски</li>
+          <li class="product-compound-item">минералы</li>
+          <li class="product-compound-item">масла</li>
         </ul>
         <div class="product-price-container">
           <b class="product-price-label">Цена:</b>
           <span class="product-price">7 520 &#8381</span>
+        </div> 
       </li>
     </ul>
   </div>
