connected the buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   <div class="container">
     <div class="background-image"></div>
     <h1 class="main-heading">Выбери свой продукт</h1>
-    <ul class="product-list-container">  
+    <div class="product-catalog__button">
+      <button id="button-item" class="change-color-card-button">сменить цвет карточки</button>
+      <button id="button-item" class="change-color-the-cards-button">сменить цвет всех карточек</button>
+      <button id="button-item" class="open-google">открыть страницу google</button>
+      <button id="button-item" class="change-button-color">поменять цвет кнопки</button>
+      <button id="button-item" class="open-consol-log">вывести сообшение в консоль лог</button>
+    </div> 
+    <ul class="product-list-container"> 
       <li class="card-container">
         <img class="product-image" src="/img/muss.png" alt="Товар увлажняющий мусс"/>
         <span class="product-category">для нормальной кожи</span>
@@ -96,5 +103,6 @@
       </li>
     </ul>
   </div>
+  <script src="main.js"></script>
 </body>
 </html> 
