created functions and parameters 5 tasks

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       </li>
     </ul>
   </div>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
+  <script src="homework-5.js"></script>
 </body>
 </html> 
